<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>

<package format="3">
  <name>swerve_controller</name>
  <version>0.0.1</version>
  <description>A ROS2 implementation of swerve drive controller. Based on the ROS2 steering
    controller library and Gabriel Urbain's ROS1 implementation and some inspiration from Patrick van der Velde's zinger_swerve_controller </description>
  <maintainer email="jclinton830@gmail.com">Jerome Justin</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>generate_parameter_library</build_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>backward_ros</depend>
  <depend>control_msgs</depend>
  <depend>controller_interface</depend>
  <depend>ros2_controllers_interfaces</depend>
  <depend>geometry_msgs</depend>
  <depend>hardware_interface</depend>
  <depend>nav_msgs</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>realtime_tools</depend>
  <depend>rcpputils</depend>
  <depend>std_srvs</depend>
  <depend>tf2</depend>
  <depend>tf2_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <test_depend>ament_cmake_gmock</test_depend>
  <test_depend>controller_manager</test_depend>
  <test_depend>ros2_control_test_assets</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
